--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hear is my first lesson about Git</h1>
+    <h1>Hear is my first lesson about Git from Qabas Branch</h1>
 
     <script src="app.js"></script>
 </body>
