--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2> Qabas uppdate</h2>
     <h1>Hear is my first lesson about Git from Qabas Branch</h1>
 
     <script src="app.js"></script>
